<resources>
    <string name="app_name">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">nootnoot</string>
    <string name="nav_header_subtitle">test@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_family">Family</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_school">School</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_gallery">Gallery</string>

</resources>